# KaLLaM-Motivational-Therapeutic-Advisor

./: .dockerignore  .gitignore  CITATION.cff  Citation.md  Dockerfile  PROPOSAL.md  README.md  apprunner.yaml  chatbot_demo.py  chatbot_dev_app.py  chatbot_prompt.py  data_manager.py  evaluation.ipynb  pyproject.toml  requirements.txt  test_credentials.py
core/: chatbot_manager.py  data_manager.py  evaluation_harness.py  orchestrator.py
core/agents/: doctor.py  summarizer.py  supervisor.py  supervisor_bedrock.py  translator.py
core/agents/Judges/: agentic_evaluator.py  artificial_users.py  judge_evaluator.py  therapy_bot.py
core/judges/: embedding_scorer.py  llm_client.py  therapy_bot.py
dataset/: data_preprocessor.py  ex_data_preprocessor.py
front_ends/: chatbot_demo.py  chatbot_dev_app.py
gui/: chatbot_demo.py  chatbot_dev_app.py  simple_gui.py
scripts/: bimisc_coder.py  dataset_converter.py  dataset_loader.py  eng_bimisc_coder.py  eng_silver_misc_coder.py  evaluation.ipynb  ex_data_preprocessor.py  gold_translator.py  in_data_preprocessor.py  model_evaluation.py  model_evaluator.py  smoke_manager.py  thai_bimisc_coder.py  thai_silver_misc_coder.py  visualizer.ipynb  visualizer_cell9.py
src/kallam/: __init__.py
src/kallam/app/: chatbot_manager.py
src/kallam/infra/: db.py  exporter.py  message_store.py  session_store.py  summary_store.py  token_counter.py
src/kallam/infrastructure/: sea_lion.py
tests/: conftest.py  fakes.py  gradio_chatbot_manager_smoketest.py  test_manager_integration.py  test_manager_unit.py  test_stores_unit.py
(+22 files in other folders)
